--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "MySqlConnect":"server=localhost;user=root;password=123456;database=tienda2023"
+    "MySqlConnect":"server=localhost;user=campus;password=campus2023;database=tienda2023"
   }
 }
