--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConnect":"server=localhost;user=root;password=123456;database=tienda2023"
+    "MySqlConnect":"server=localhost;user=campus;password=campus2023;database=tienda2023"
   }
 }
